[metadata]
name=r53spflat
version=22.02.20
author = gunville
author_email = rk13088@yahoo.com
description = Flattens SPF records and updates Cloudflare zones
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/Glocktober/r53spflat
project_urls =
    repo = https://github.com/Glocktober/r53spflat.git
    overview = https://github.com/Glocktober/r53spflat/blob/master/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords='route53 aws dns spf flattener'
[options]
include_package_data = True
package_dir = 
    = src
packages = find:
install_requires =
    boto3>=1.21.2
    sender-policy-flattener==0.3.1
python_requires = >=3.6
scripts = 
    scripts/r53spflat
[options.data_files] 
[options.packages.find]
where = src